force-app/main/default/objects/Shipment__c/fields/COI_Number__c.field-meta.xml
<CustomField>
    <fullName>COI_Number__c</fullName>
    <formula>Patient_Milestone__r.Patient_Journey__r.COI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COI Number</label>
    <type>Text</type>
</CustomField>