force-app/main/default/objects/Shipment__c/fields/Current_Address__c.field-meta.xml
<CustomField>
    <fullName>Current_Address__c</fullName>
    <label>Current Address</label>
    <type>Address</type>
</CustomField>