force-app/main/default/objects/Shipment__c/fields/Dropoff_Address__c.field-meta.xml
<CustomField>
    <fullName>Dropoff_Address__c</fullName>
    <label>Dropoff Address</label>
    <type>Address</type>
</CustomField>