force-app/main/default/objects/Shipment__c/fields/Patient_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Patient_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Milestone</label>
    <referenceTo>Patient_Milestone__c</referenceTo>
    <relationshipLabel>Shipment</relationshipLabel>
    <relationshipName>Shipment</relationshipName>
    <type>Lookup</type>
</CustomField>