force-app/main/default/objects/Shipment__c/fields/Pickup_Address__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Address__c</fullName>
    <label>Pickup Address</label>
    <type>Address</type>
</CustomField>