force-app/main/default/objects/Shipment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturing Started</fullName>
            </value>
            <value>
                <fullName>Manufacturing Completed</fullName>
            </value>
            <value>
                <fullName>Manufacturing Terminated</fullName>
            </value>
            <value>
                <fullName>Quality Check Complete</fullName>
            </value>
            <value>
                <fullName>Quality Check Failed</fullName>
            </value>
            <value>
                <fullName>Shipped to Clinical Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>