force-app/main/default/objects/Shipment__c/fields/Waybill_Number__c.field-meta.xml
<CustomField>
    <fullName>Waybill_Number__c</fullName>
    <label>Waybill Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>