force-app/main/default/objects/Shipment__c/recordTypes/BioCair.recordType-meta.xml
<RecordType>
    <fullName>BioCair</fullName>
    <active>true</active>
    <label>BioCair</label>
</RecordType>