force-app/main/default/objects/Shipment__c/recordTypes/Quickstat.recordType-meta.xml
<RecordType>
    <fullName>Quickstat</fullName>
    <active>true</active>
    <label>Quickstat</label>
</RecordType>