force-app/main/default/objects/Shipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Tracking_ID__c</columns>
    <columns>Order_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>