force-app/main/default/objects/Shipment__c/listViews/All_Booked_Shipment.listView-meta.xml
<ListView>
    <fullName>All_Booked_Shipment</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All Booked Shipment</label>
</ListView>